--- a/Modules/Makefile
+++ b/Modules/Makefile
@@ -9,6 +9,10 @@ MODFLAGS= $(MOD_FLAG)../iotk/src $(MOD_FLAG)../ELPA/src $(MOD_FLAG)../FFTXlib $(
 # list of modules
 
 MODULES = \
+cell_base_large.o \
+mp_large.o \
+xc_vdW_DF_large.o \
+xc_rVV10_large.o \
 atom.o \
 autopilot.o \
 basic_algebra_routines.o \
